2002-07-03  Andrew Choi  <akochoi@shaw.ca>

	* macterm.c (init_font_name_table): Also add entry for
	jisx0201.1976-0 coding for Japanese font.
	(XLoadQueryFont): Use it.

2002-07-02  Richard M. Stallman  <rms@gnu.org>

	* keymap.c (Fdefine_key): Doc fix.

	* xterm.c (x_term_init): Turn off polling around XtOpenDisplay.

2002-07-02  Juanma Barranquero  <lektu@terra.es>

	* keymap.c (syms_of_keymap): Fix typo.

2002-07-01  Andrew Choi  <akochoi@shaw.ca>

	* s/darwin.h: Define POSIX_SIGNALS.

	* macterm.c (do_ae_open_documents) [MAC_OSX]: Call FSpMakeFSRef
	and FSRefMakePath to convert FSSpec returned with Apple Event to
	Posix pathname.
	(mac_initialize) [TARGET_API_MAC_CARBON]: Call
	init_required_apple_events and disable the `Quit' menu item
	provided automatically by the Carbon Toolbox.

2002-07-01  Dave Love  <fx@gnu.org>

	* keyboard.c (kbd_buffer_store_event): Fix interrupt_signal decl
	for K&R.

	* xterm.c: Fix prototype for K&R.

	* term.c (costs_set): Declare static, non-initialized for pcc.

2002-07-01  Richard M. Stallman  <rms@gnu.org>

	* keyboard.c (timer_last_idleness_start_time): New variable.
	(timer_start_idle): Set that.
	(read_key_sequence): Use that to reset timer_idleness_start_time
	to previous value.
	
	* window.c (Frecenter): With arg, set optional_new_start.

	* xdisp.c (redisplay_internal): Make optional_new_start really work.

	* minibuf.c (Fminibuffer_complete_and_exit): Move to end of
	buffer for completion.

2002-06-29  Ken Raeburn  <raeburn@gnu.org>

	* xdisp.c (store_mode_line_string): Lisp_Object/int mixup.

2002-06-28  Jan D.  <jan.h.d@swipnet.se>

	* keyboard.c (readable_filtered_events): New function that filters
	FOCUS_IN_EVENT depending on parameter.
	(readable_events): Calls readable_filtered_events, not filtering
	FOCUS_IN_EVENT.
	(get_filtered_input_pending): New function, filtering parameter passed
	to readable_filtered_events.
	(get_input_pending): Calls get_filtered_input_pending, not filtering
	FOCUS_IN_EVENT.